added methods to fetch random users and add them to main array

--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
         <h2>Person<strong>Wealth</strong></h2>
       </main>
     </div>
-    <style src="script.css"></style>
+    <script src="script.js"></script>
   </body>
 </html>
