users are displayed and can add user with add user button

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <h1>Dom Array Methods</h1>
     <div class="container">
       <aside>
-        <button id="add_user">Add User 😁</button>
+        <button id="add-user">Add User 😁</button>
         <button id="double">Double Money 💰</button>
-        <button id="show_millionaires">Show Millionaires 💵</button>
+        <button id="show-millionaires">Show Millionaires 💵</button>
         <button id="sort">Sort by Richest ⬇️</button>
-        <button id="idcalculate_wealth">Calculate entire Wealth 🖩</button>
+        <button id="idcalculate-wealth">Calculate entire Wealth 🖩</button>
       </aside>
       <main id="main">
         <h2>Person<strong>Wealth</strong></h2>
