added method to calculate entire wealth and display it

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <button id="double">Double Money 💰</button>
         <button id="show-millionaires">Show Millionaires 💵</button>
         <button id="sort">Sort by Richest ⬇️</button>
-        <button id="idcalculate-wealth">Calculate entire Wealth 🖩</button>
+        <button id="calculate-wealth">Calculate entire Wealth 🖩</button>
       </aside>
       <main id="main">
         <h2>Person<strong>Wealth</strong></h2>
